--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="./index.html">Contacts</a>
+            <a href="./index.html" class="header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
