--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <body>
   <header class="header">
+    <nav class="header-navigation">
       <a class="header-logo-web link" href="./index.html"
         >Web<span class="header-logo">Studio</span>
       </a>
@@ -28,6 +29,7 @@
           <a class="header-link link" href="./index.html">Contacts</a>
         </li>
       </ul>
+      </nav>
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
