--- a/portfolio.html
+++ b/portfolio.html
@@ -57,112 +57,100 @@
           <li class="portfolio-item"><button class="portfolio-btn" type="button">Design</button></li>
           <li class="portfolio-item"><button class="portfolio-btn" type="button">Marketing</button></li>
         </ul>
-      </section>
-      <!--Row 1-->
-      <section class="banking">
-        <h2 hidden>Banking</h2>
-        <ul class="banking-list list">
-          <li class="banking-item">
+        <ul class="portfolio-list list">
+          <li class="portfolio-item">
             <img
               src="./images/image-8.jpg"
               alt="Banking"
               width="360"
               height="300"
             />
-            <h3 class="banking-title">Banking App Interface Concept</h3>
-            <p class="banking-text">App</p>
+            <h3 class="portfolio-title">Banking App Interface Concept</h3>
+            <p class="portfolio-text">App</p>
           </li>
-          <li class="banking-item">
+          <li class="portfolio-item">
             <img
               src="./images/image-9.jpg"
               alt="Cashless"
               width="360"
               height="300"
             />
-            <h3 class="banking-title">Cashless Payment</h3>
-            <p class="banking-text">Marketing</p>
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
-          <li class="banking-item">
+          <li class="portfolio-item">
             <img
               src="./images/image-10.jpg"
               alt="Meditation"
               width="360"
               height="300"
             />
-            <h3 class="banking-title">Meditation App</h3>
-            <p class="banking-text">App</p>
+            <h3 class="portfolio-title">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
         </ul>
-      </section>
-      <!--Row 2-->
-      <section class="service">
-        <h2 hidden>Row 2</h2>
-        <ul class="service-list list">
-          <li class="service-item">
+        <ul class="portfolio-list list">
+          <li class="portfolio-item">
             <img
               src="./images/image-11.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
-            <h3 class="service-title">Taxi Service</h3>
-            <p class="service-text">Marketing</p>
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
-          <li class="service-item">
+          <li class="portfolio-item">
             <img
               src="./images/image-12.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h3 class="service-title">Screen Illustrations</h3>
-            <p class="service-text">Design</p>
+            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
           </li>
-          <li class="service-item">
+          <li class="portfolio-item">
             <img
               src="./images/image-13.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
-            <h3 class="service-title">Online Courses</h3>
-            <p class="service-text">Marketing</p>
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
-      </section>
-      <!--Row 3-->
-      <section class="fresh">
-        <h2 hidden>Row 3</h2>
-        <ul class="fresh-list list">
-          <li class="fresh-item">
+        <ul class="portfolio-list list">
+          <li class="portfolio-item">
             <img
               src="./images/image-14.jpg"
               alt="Stories"
               width="360"
               height="300"
             />
-            <h3 class="fresh-titile">Instagram Stories Concept</h3>
-            <p class="fresh-text">Design</p>
+            <h3 class="portfolio-titile">Instagram Stories Concept</h3>
+            <p class="portfolio-text">Design</p>
           </li>
-          <li class="fresh-item">
+          <li class="portfolio-item">
             <img
               src="./images/image-15.jpg"
               alt="Organic Food"
               width="360"
               height="300"
             />
-            <h3 class="fresh-titile">Organic Food</h3>
-            <p class="fresh-text">Web Site</p>
+            <h3 class="portfolio-titile">Organic Food</h3>
+            <p class="portfolio-text">Web Site</p>
           </li>
-          <li class="fresh-item">
+          <li class="portfolio-item">
             <img
               src="./images/image-16.jpg"
               alt="Fresh Coffee"
               width="360"
               height="300"
             />
-            <h3 class="fresh-titile">Fresh Coffee</h3>
-            <p class="fresh-text">Web Site</p>
+            <h3 class="portfolio-titile">Fresh Coffee</h3>
+            <p class="portfolio-text">Web Site</p>
           </li>
         </ul>
       </section>
