portfolio-change-pr

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a href="./index.html" class="header-link link">Contacts</a>
+            <a href="" class="header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -55,7 +55,7 @@
       </section>
       <!--Section 1-->
       <section class="advantages">
-        <h2 hidden>About</h2>
+        <h2 hidden class="advantages-top-title">About</h2>
         <ul class="advantages-list list">
           <li class="advantages-item">
             <h3 class="advantages-title">Strategy</h3>
