--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
           <a class="header-link link" href="./portfolio.html">Portfolio</a>
         </li>
         <li class="header-item">
-          <a class="header-link link" href="./index.html">Contacts</a>
+          <a class="header-link link" href="">Contacts</a>
         </li>
       </ul>
       </nav>
@@ -65,7 +65,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Banking App Interface Concept</h3>
+            <h2 class="portfolio-title">Banking App Interface Concept</h2>
             <p class="portfolio-text">App</p>
           </li>
           <li class="portfolio-item">
@@ -75,7 +75,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Cashless Payment</h3>
+            <h2 class="portfolio-title">Cashless Payment</h2>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
@@ -85,7 +85,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Meditation App</h3>
+            <h2 class="portfolio-title">Meditation App</h2>
             <p class="portfolio-text">App</p>
           </li>
         </ul>
@@ -97,7 +97,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Taxi Service</h3>
+            <h2 class="portfolio-title">Taxi Service</h2>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
@@ -107,7 +107,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <h2 class="portfolio-title">Screen Illustrations</h2>
             <p class="portfolio-text">Design</p>
           </li>
           <li class="portfolio-item">
@@ -117,7 +117,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Online Courses</h3>
+            <h2 class="portfolio-title">Online Courses</h2>
             <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
@@ -129,7 +129,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-titile">Instagram Stories Concept</h3>
+            <h2 class="portfolio-titile">Instagram Stories Concept</h2>
             <p class="portfolio-text">Design</p>
           </li>
           <li class="portfolio-item">
@@ -139,7 +139,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-titile">Organic Food</h3>
+            <h2 class="portfolio-titile">Organic Food</h2>
             <p class="portfolio-text">Web Site</p>
           </li>
           <li class="portfolio-item">
@@ -149,7 +149,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-titile">Fresh Coffee</h3>
+            <h2 class="portfolio-titile">Fresh Coffee</h2>
             <p class="portfolio-text">Web Site</p>
           </li>
         </ul>
