--- a/portfolio.html
+++ b/portfolio.html
@@ -57,26 +57,26 @@
           <li class="portfolio-item"><button class="portfolio-btn" type="button">Design</button></li>
           <li class="portfolio-item"><button class="portfolio-btn" type="button">Marketing</button></li>
         </ul>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
+        <ul class="banking-list list">
+          <li class="banking-item">
             <img
               src="./images/image-8.jpg"
               alt="Banking"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-title">Banking App Interface Concept</h2>
-            <p class="portfolio-text">App</p>
+            <h2 class="banking-title">Banking App Interface Concept</h2>
+            <p class="banking-text">App</p>
           </li>
-          <li class="portfolio-item">
+          <li class="banking-item">
             <img
               src="./images/image-9.jpg"
               alt="Cashless"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-title">Cashless Payment</h2>
-            <p class="portfolio-text">Marketing</p>
+            <h2 class="banking-title">Cashless Payment</h2>
+            <p class="banking-text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -85,72 +85,72 @@
               width="360"
               height="300"
             />
-            <h2 class="portfolio-title">Meditation App</h2>
-            <p class="portfolio-text">App</p>
+            <h2 class="banking-title">Meditation App</h2>
+            <p class="banking-text">App</p>
           </li>
         </ul>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
+        <ul class="service-list list">
+          <li class="service-item">
             <img
               src="./images/image-11.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-title">Taxi Service</h2>
-            <p class="portfolio-text">Marketing</p>
+            <h2 class="service-title">Taxi Service</h2>
+            <p class="service-text">Marketing</p>
           </li>
-          <li class="portfolio-item">
+          <li class="service-item">
             <img
               src="./images/image-12.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-title">Screen Illustrations</h2>
-            <p class="portfolio-text">Design</p>
+            <h2 class="service-title">Screen Illustrations</h2>
+            <p class="service-text">Design</p>
           </li>
-          <li class="portfolio-item">
+          <li class="service-item">
             <img
               src="./images/image-13.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-title">Online Courses</h2>
-            <p class="portfolio-text">Marketing</p>
+            <h2 class="service-title">Online Courses</h2>
+            <p class="service-text">Marketing</p>
           </li>
         </ul>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
+        <ul class="concept-list list">
+          <li class="concept-item">
             <img
               src="./images/image-14.jpg"
               alt="Stories"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-titile">Instagram Stories Concept</h2>
-            <p class="portfolio-text">Design</p>
+            <h2 class="concept-titile">Instagram Stories Concept</h2>
+            <p class="concept-text">Design</p>
           </li>
-          <li class="portfolio-item">
+          <li class="concept-item">
             <img
               src="./images/image-15.jpg"
               alt="Organic Food"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-titile">Organic Food</h2>
-            <p class="portfolio-text">Web Site</p>
+            <h2 class="concept-titile">Organic Food</h2>
+            <p class="concept-text">Web Site</p>
           </li>
-          <li class="portfolio-item">
+          <li class="concept-item">
             <img
               src="./images/image-16.jpg"
               alt="Fresh Coffee"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-titile">Fresh Coffee</h2>
-            <p class="portfolio-text">Web Site</p>
+            <h2 class="concept-titile">Fresh Coffee</h2>
+            <p class="concept-text">Web Site</p>
           </li>
         </ul>
       </section>
