change-place-img

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,19 +62,19 @@
           <li class="portfolio-item">
             <a href="" class="link">
             <img
-              src="./images/image-8.jpg"
+              src="./images/portfolio/image-1.jpg"
               alt="Banking"
               width="360"
               height="300"
             />
-            <h2 class="banking-title">Banking App Interface Concept</h2>
-            <p class="banking-text">App</p>
+            <h2 class="portfolio-title">Banking App Interface Concept</h2>
+            <p class="portfolio-text">App</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="link">
             <img
-              src="./images/image-9.jpg"
+              src="./images/portfolio/image-2.jpg"
               alt="Cashless"
               width="360"
               height="300"
@@ -86,7 +86,7 @@
           <li class="portfolio-item">
             <a href="" class="link">
             <img
-              src="./images/image-10.jpg"
+              src="./images/portfolio/image-3.jpg"
               alt="Meditation"
               width="360"
               height="300"
@@ -101,7 +101,7 @@
           <li class="portfolio-item">
             <a href="" class="link">
             <img
-              src="./images/image-11.jpg"
+              src="./images/portfolio/image-4.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -113,7 +113,7 @@
           <li class="portfolio-item">
             <a href="" class="link">
             <img
-              src="./images/image-12.jpg"
+              src="./images/portfolio/image-5.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -125,7 +125,7 @@
           <li class="portfolio-item">
             <a href="" class="link">
             <img
-              src="./images/image-13.jpg"
+              src="./images/portfolio/image-6.jpg"
               alt="Online Courses"
               width="360"
               height="300"
@@ -140,36 +140,36 @@
           <li class="portfolio-item">
             <a href="" class="link">
             <img
-              src="./images/image-14.jpg"
+              src="./images/portfolio/image-7.jpg"
               alt="Stories"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-titile">Instagram Stories Concept</h2>
+            <h2 class="portfolio-title">Instagram Stories Concept</h2>
             <p class="portfolio-text">Design</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="link">
             <img
-              src="./images/image-15.jpg"
+              src="./images/portfolio/image-8.jpg"
               alt="Organic Food"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-titile">Organic Food</h2>
+            <h2 class="portfolio-title">Organic Food</h2>
             <p class="portfolio-text">Web Site</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="link">
             <img
-              src="./images/image-16.jpg"
+              src="./images/portfolio/image-9.jpg"
               alt="Fresh Coffee"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-titile">Fresh Coffee</h2>
+            <h2 class="portfolio-title">Fresh Coffee</h2>
             <p class="portfolio-text">Web Site</p>
             </a>
           </li>
