--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     <!--Main content-->
     <main>
       <!--Filters content-->
-      <section class="button-menu">
+      <section class="portfolio">
         <h1 hidden>Portfolio</h1>
         <ul class="button-menu-list list">
           <li class="button-menu-item"><button class="button-menu-btn" type="button">All</button></li>
